<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/editText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg1"
        android:text="@string/btnEditText" />

    <Button
        android:id="@+id/checkbox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_bg1"
        android:text="@string/btnCheckBox" />

    <Button
        android:id="@+id/btnRadio"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg1"
        android:text="@string/btnRadio" />
</LinearLayout>
